--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -4,4 +4,4 @@ sqlScmPath=../ECloudIntegrationDemo_sql
 sqlScmSystem=git
 databaseBackupRestoreLocation=
 sqlScmSQLBaseDir=sql_code
-sqlScmLastImportID=
+sqlScmLastImportID=7bb36390
