--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,7 +1,11 @@
-MAIN.sqlScmBranch=master
-MAIN.sqlScmLastImportID=
-sqlScmPath=../ECloudIntegrationDemo_sql
+# SQL Code
 sqlScmSystem=git
+sqlScmBranch=master
+sqlScmLastImportID=
+sqlScmPath=../ECloudIntegrationDemo_sql
 databaseBackupRestoreLocation=
 sqlScmSQLBaseDir=sql_code
-sqlScmLastImportID=7bb36390
+#Datical DB project
+ddbScmSystem=git
+ddbScmPath=../ECloudIntegrationDemo
+ddbScmBranch=master
