--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -5,6 +5,7 @@ sqlScmLastImportID=
 sqlScmPath=../ECloudIntegrationDemo_sql
 databaseBackupRestoreLocation=
 sqlScmSQLBaseDir=sql_code
+sqlScmLastImportID=7bb36390
 #Datical DB project
 ddbScmSystem=git
 ddbScmPath=../ECloudIntegrationDemo
