Datical DB Deployment Packager Deployment Pipeline: ECloudPipeline Deploy / Rollback Scripts Processed (Associated Labels): ddl\schema_MSSQL_GloboFace2.sql / none (schema_MSSQL_GloboFace2.sql,$all)

--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,12 +1,10 @@
-# SQL Code
+#Tue May 30 15:15:21 CDT 2017
 sqlScmSystem=git
-sqlScmBranch=master
-sqlScmLastImportID=
-sqlScmPath=../ECloudIntegrationDemo_sql
-databaseBackupRestoreLocation=
-sqlScmSQLBaseDir=sql_code
-sqlScmLastImportID=7bb36390
-#Datical DB project
 ddbScmSystem=git
-ddbScmPath=../ECloudIntegrationDemo
+databaseBackupRestoreLocation=
+sqlScmLastImportID=86ad6c9
+sqlScmBranch=master
 ddbScmBranch=master
+ddbScmPath=../ECloudIntegrationDemo
+sqlScmPath=../ECloudIntegrationDemo_sql
+sqlScmSQLBaseDir=sql_code
