--- a/deployPackager.properties
+++ b/deployPackager.properties
@@ -1,8 +1,8 @@
-#Thu Jun 08 17:18:40 CDT 2017
+#Tue Jun 13 02:04:29 UTC 2017
 sqlScmSystem=git
 ddbScmSystem=git
 databaseBackupRestoreLocation=
-sqlScmLastImportID=cdad19c
+sqlScmLastImportID=4cfd499
 sqlScmBranch=master
 ddbScmBranch=master
 ddbScmPath=../ECloudIntegrationDemo
